--- a/tabs-section/index.html
+++ b/tabs-section/index.html
@@ -5,9 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabs Section</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="section-center">
+        <div class="image">
+            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.hdnicewallpapers.com%2FWalls%2FBig%2FNature%2520and%2520Landscape%2FBeautiful_Sunrising_Nature_Image.jpg&f=1&nofb=1" alt="">
+        </div>
+        <div class="tabs">
+            <div class="btn-container">
+                <button class="button live" data-id="step1">Step 1</button>
+                <button class="button" data-id="step2">Step 2</button>
+                <button class="button" data-id="step3">Step 3</button>
+            </div>
+        
+            <div class="tabs-content">
+                <div class="content live" id="step1">
+                    <h3>Step 1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, est reiciendis. Cumque quae beatae cupiditate sit porro, distinctio praesentium asperiores deleniti iure saepe amet! Aliquam quod, quibusdam itaque placeat facere aut provident labore unde cumque fuga quisquam voluptates mollitia nisi aliquid fugiat voluptas temporibus excepturi consequatur veniam dolor odit alias nesciunt et ea. Sunt, incidunt! Maxime corporis, totam similique asperiores voluptatem nemo corrupti fugiat sequi quasi sunt ipsa reprehenderit voluptate. Itaque, iure magnam beatae vel explicabo eius repellendus enim culpa cumque, suscipit voluptates voluptatum odit assumenda sapiente. Nihil dolores quo, numquam qui modi quam aliquid facere cupiditate rerum rem molestias.</p>
+                </div>
+                <div class="content" id="step2">
+                    <h3>Step 2</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, est reiciendis. Cumque quae beatae cupiditate sit porro, distinctio praesentium asperiores deleniti iure saepe amet! Aliquam quod, quibusdam itaque placeat facere aut provident labore unde cumque fuga quisquam voluptates mollitia nisi aliquid fugiat voluptas temporibus excepturi consequatur veniam dolor odit alias nesciunt et ea. Sunt, incidunt! Maxime corporis, totam similique asperiores voluptatem nemo corrupti fugiat sequi quasi sunt ipsa reprehenderit voluptate. Itaque, iure magnam beatae vel explicabo eius repellendus enim culpa cumque, suscipit voluptates voluptatum odit assumenda sapiente. Nihil dolores quo, numquam qui modi quam aliquid facere cupiditate rerum rem molestias.</p>
+                </div>
+                <div class="content" id="step3">
+                    <h3>Step 3</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, est reiciendis. Cumque quae beatae cupiditate sit porro, distinctio praesentium asperiores deleniti iure saepe amet! Aliquam quod, quibusdam itaque placeat facere aut provident labore unde cumque fuga quisquam voluptates mollitia nisi aliquid fugiat voluptas temporibus excepturi consequatur veniam dolor odit alias nesciunt et ea. Sunt, incidunt! Maxime corporis, totam similique asperiores voluptatem nemo corrupti fugiat sequi quasi sunt ipsa reprehenderit voluptate. Itaque, iure magnam beatae vel explicabo eius repellendus enim culpa cumque, suscipit voluptates voluptatum odit assumenda sapiente. Nihil dolores quo, numquam qui modi quam aliquid facere cupiditate rerum rem molestias.</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="./index.js"></script>
 </body>
 </html>
